--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "node-sass": "^4.14.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "swiper": "^8.2.4",
     "web-vitals": "^2.1.4"
