--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "classnames": "^2.3.1",
     "node-sass": "^4.14.1",
     "react": "^18.1.0",
+    "react-content-loader": "^6.2.0",
     "react-dom": "^18.1.0",
+    "react-paginate": "^8.1.3",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
