--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "classnames": "^2.3.1",
     "node-sass": "^4.14.1",
     "qs": "^6.11.0",
+    "query-string": "^7.1.1",
     "react": "^18.1.0",
     "react-content-loader": "^6.2.0",
     "react-dom": "^18.1.0",
@@ -20,6 +21,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "swiper": "^8.2.4",
+    "use-query-params": "^1.2.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
