--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^28.1.6",
+    "@types/node": "^18.6.2",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "node-sass": "^4.14.1",
@@ -25,6 +29,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "swiper": "^8.2.4",
+    "typescript": "^4.7.4",
     "use-query-params": "^1.2.3",
     "web-vitals": "^2.1.4"
   },
