--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.54.4",
     "swiper": "^8.2.4",
     "typescript": "^4.7.4",
     "use-query-params": "^1.2.3",
