--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
 		"skipLibCheck": true,
 		"esModuleInterop": true,
 		"allowSyntheticDefaultImports": true,
-		"strict": false,
+		"strict": true,
 		"forceConsistentCasingInFileNames": true,
 		"module": "esnext",
 		"moduleResolution": "node",
@@ -16,7 +16,13 @@
 		"noEmit": true,
 		"noImplicitAny": false,
 		"noFallthroughCasesInSwitch": true,
-		"strictNullChecks": false
+		"strictNullChecks": false,
+    "baseUrl": "src", 
+    "paths": {
+      "comps/*": ["components/*"],
+      "utils/*": ["utils/*"],
+      "hooks/*": ["hooks/*"]
+    }
 	},
 	"include": ["src"],
 	"files": ["src/@types/index.d.ts"]
